<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:id="@+id/fragment_check_options">

    <!-- Checkboxes for what types of chords to select -->
    <CheckBox
        android:id="@+id/checkbox_major_chords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:checked="true"
        android:text="@string/major_chords"/>

    <CheckBox
        android:id="@+id/checkbox_minor_chords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/minor_chords"/>

    <CheckBox
        android:id="@+id/checkbox_dominant_chords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dominant_chords"/>

    <!-- Separator -->
    <View style="@style/VerticalSeparator"/>

    <!-- Enable hints checkbox -->
    <Switch
        android:id="@+id/switch_hints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/enable_hints"/>

</LinearLayout>