<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <!-- Background Color -->
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/score_display_title"
        android:layout_alignStart="@id/score_display_title"
        android:layout_alignLeft="@id/score_display_title"
        android:layout_alignEnd="@+id/current_score_layout"
        android:layout_alignRight="@id/current_score_layout"
        android:layout_alignBottom="@+id/overall_score_layout"
        android:background="@color/trans_black">
    </FrameLayout>

    <!-- Title Text View -->
   <TextView
       android:id="@id/score_display_title"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:paddingTop="4dp"
       android:paddingLeft="4dp"
       android:paddingRight="4dp"
       android:text="@string/score"
       android:textSize="@dimen/text_size_medium"
       android:textColor="@android:color/white"
       android:layout_alignParentLeft="true"
       android:layout_alignParentStart="true"
       android:layout_alignParentTop="true"/>

    <!-- Current Score Status -->
    <LinearLayout
        android:id="@id/current_score_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="0dp"
        android:layout_below="@id/score_display_title"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current"
            android:textSize="@dimen/text_size_small"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/textview_current_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="0dp"
            android:text="0 / 0"
            android:textSize="@dimen/text_size_small"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <!-- Overall Score Status -->
    <LinearLayout
        android:id="@id/overall_score_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="0dp"
        android:paddingBottom="4dp"
        android:layout_below="@id/current_score_layout"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overall"
            android:textSize="@dimen/text_size_small"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/textview_overall_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="0dp"
            android:text="0 / 0"
            android:textSize="@dimen/text_size_small"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</RelativeLayout>